user endpoinpoints, cache functionality set up